// Version
syntax = "proto3";

// Package name
option go_package = "github.com/muhammadfarhankt/NFT-Bidding-Platform";

// Structures
message UserProfile {
    string id = 1;
    string email = 2;
    string username = 3;
    double walletAmount = 4;
    int32 roleCode = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CredentialSearchReq {
    string email = 1;
    string password = 2;
}

message EmailSearchReq {
    string email = 1;
}

message FindOneUserProfileToRefreshReq {
    string userId = 1;
}

message GetUserWalletAccountReq {
    string userId = 1;
}

message GetUserWalletAccountRes {
    string userId = 1;
    double balance = 2;
}

// Methods
service UserGrpcService {
    rpc CredentialSearch(CredentialSearchReq) returns (UserProfile);
    rpc FindOneUserProfileToRefresh (FindOneUserProfileToRefreshReq) returns (UserProfile);
    rpc GetUserWalletAccount (GetUserWalletAccountReq) returns (GetUserWalletAccountRes);
    rpc FindOneUserProfile(EmailSearchReq) returns (UserProfile);
}